--- a/docker/monero/Dockerfile
+++ b/docker/monero/Dockerfile
@@ -7,7 +7,7 @@ WORKDIR /var/monero
 RUN cd /
 RUN curl 'https://downloads.getmonero.org/cli/monero-linux-x64-v0.18.2.0.tar.bz2' -O
 RUN tar -xvf monero-linux-x64-v0.18.2.0.tar.bz2
-RUN mv monero-x86_64-linux-gnu-v0.18.2.0/* .
+RUN mv -v monero-x86_64-linux-gnu-v0.18.2.0/* .
 
 VOLUME /var/monero
 
