--- a/docker/p2pool/Dockerfile
+++ b/docker/p2pool/Dockerfile
@@ -6,7 +6,7 @@ RUN mkdir -p /p2pool
 RUN cd p2pool
 RUN wget https://github.com/SChernykh/p2pool/releases/download/v3.1/p2pool-v3.1-linux-x64.tar.gz
 RUN tar -xvzf p2pool-v3.1-linux-x64.tar.gz
-RUN mv p2pool-v3.1-linux-x64/* .
+RUN mv -v p2pool-v3.1-linux-x64/* .
 
 EXPOSE 3333 37889
 
