add monero binary

--- a/docker/monero/Dockerfile
+++ b/docker/monero/Dockerfile
@@ -4,7 +4,8 @@ RUN apk add --no-cache curl ca-certificates bash
 
 
 WORKDIR /
-RUN curl 'https://downloads.getmonero.org/cli/monero-linux-x64-v0.18.2.0.tar.bz2' -O
+COPY monero-linux-x64-v0.18.2.0.tar.bz2 .
+#RUN curl 'https://downloads.getmonero.org/cli/monero-linux-x64-v0.18.2.0.tar.bz2' -O
 RUN tar -xvf monero-linux-x64-v0.18.2.0.tar.bz2
 RUN mv -v monero-x86_64-linux-gnu-v0.18.2.0/* .
 
